--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.1",
+    "@nestjs/common": "^11.1.11",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.1",
+    "@nestjs/core": "^11.1.11",
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.11",
     "@nestjs/swagger": "^11.2.4",
     "@nestjs/typeorm": "^11.0.0",
     "@scalar/express-api-reference": "^0.8.32",
     "bcrypt": "^6.0.0",
-    "express": "^4.18.2",
+    "express": "4.18.2",
     "mssql": "^12.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
