--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@scalar/express-api-reference": "^0.8.32",
     "bcrypt": "^6.0.0",
+    "dotenv": "^16.4.5",
     "express": "4.18.2",
     "mssql": "^12.2.0",
     "passport": "^0.7.0",
