--- a/nginx-aprendecsharp-http.conf
+++ b/nginx-aprendecsharp-http.conf
@@ -1,41 +1,10 @@
-# Configuración de Nginx para aprendecsharp.site
-# Este archivo debe copiarse a /etc/nginx/sites-available/aprendecsharp.site
-# y luego crear un enlace simbólico en /etc/nginx/sites-enabled/
+# Configuración de Nginx para aprendecsharp.site (HTTP solamente)
+# Usa esta configuración primero, luego configura SSL con Certbot
 
-# Configuración HTTP (sin SSL por ahora)
-# Después de configurar SSL con Certbot, puedes descomentar la sección HTTPS
 server {
     listen 80;
     listen [::]:80;
     server_name aprendecsharp.site www.aprendecsharp.site;
-
-    # Comentar esta línea cuando tengas SSL configurado
-    # return 301 https://$server_name$request_uri;
-
-# Configuración HTTPS (descomentar después de configurar SSL con Certbot)
-# server {
-#     listen 443 ssl http2;
-#     listen [::]:443 ssl http2;
-#     server_name aprendecsharp.site www.aprendecsharp.site;
-#
-#     # Rutas a los certificados SSL (ajusta según tu configuración)
-#     # Si usas Let's Encrypt con Certbot, normalmente están en:
-#     ssl_certificate /etc/letsencrypt/live/aprendecsharp.site/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/aprendecsharp.site/privkey.pem;
-
-#     # Configuración SSL moderna y segura (descomentar con SSL)
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
-#     ssl_prefer_server_ciphers off;
-#     ssl_session_cache shared:SSL:10m;
-#     ssl_session_timeout 10m;
-#     ssl_session_tickets off;
-#
-#     # Headers de seguridad
-#     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-#     add_header X-Frame-Options "SAMEORIGIN" always;
-#     add_header X-Content-Type-Options "nosniff" always;
-#     add_header X-XSS-Protection "1; mode=block" always;
 
     # Tamaño máximo de body (para uploads)
     client_max_body_size 10M;
@@ -48,6 +17,11 @@ server {
     # Logs
     access_log /var/log/nginx/aprendecsharp-access.log;
     error_log /var/log/nginx/aprendecsharp-error.log;
+
+    # Headers de seguridad básicos (sin HTTPS)
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
 
     # Proxy hacia la aplicación NestJS en el puerto 3000
     location / {
@@ -71,7 +45,7 @@ server {
         proxy_request_buffering off;
     }
 
-    # Configuración específica para Swagger/Scalar (opcional)
+    # Configuración específica para Swagger/Scalar
     location /docs {
         proxy_pass http://localhost:3000/docs;
         proxy_http_version 1.1;
@@ -90,7 +64,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Health check endpoint (si lo implementas)
+    # Health check endpoint
     location /health {
         proxy_pass http://localhost:3000/health;
         access_log off;
